apps/sonarr/Services.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
    - name: web
      protocol: TCP
      port: 8989
      targetPort: 8989
